--- a/src/AppBundle/Resources/public/pages/cabinet.css
+++ b/src/AppBundle/Resources/public/pages/cabinet.css
@@ -1,30 +1,72 @@
-.withdrawals__header{
-    float:left;
-    height: 34px;
-    margin-bottom: 10px;
-}
 .withdrawals__add{
-    float:right;
+    position: relative;
+    margin-top: 10px;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding: 0 20px 20px 20px;
+    border-bottom:1px solid #e5e5e5;
+}
+
+.withdrawals__sum-info{
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.withdrawals__label{
+    font-size: 18px;
+    margin-bottom: 20px;
 }
 
 .withdrawals__form{
-    /*padding:25px;*/
-    /*max-width: 500px;*/
+    position: relative;
 }
 
-.window-open#withdrawalsAdd {
-    width: 400px;
+.withdrawals__price-input{
+    display: inline-block !important;
+    width:175px !important;
+    margin-right: 12px;
+    height: 34px !important;
 }
 
-.window-open#withdrawalsAdd .box-form {
-    padding: 30px 54px 30px 54px;
+.withdrawals__submit{
+    display: inline-block !important;
+    width:180px !important;
 }
 
-.withdrawal__success{
+.withdrawals__success{
+    position: absolute;
+    top:0;
+    left:0;
+    bottom: 0;
+    right:0;
+    background: #fff;
     display: none;
-    margin-bottom: 10px;
     color:#3B963D;
     font-size: 14px;
+}
+
+.withdrawals__error{
+    top: 10px !important;
+    right: auto !important;
+    left: 390px !important;
+}
+
+.withdrawals__history{
+    font-size: 18px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.stats__top-info{
+    padding-bottom: 20px;
+}
+
+.stats__bottom-info{
+    position: relative;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding: 20px 20px 0px 20px;
+    border-top:1px solid #e5e5e5;
 }
 
 .article__no-items{
