--- a/src/AppBundle/Resources/views/Cabinet/index.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/index.html.twig
@@ -5,15 +5,38 @@
 {% block cabinetContent %}
     <div class="box-form settings">
         <form class="js-settings-form" action="{{ path('cabinet_settings_write') }}" method="POST">
+            <div class="box-field-title">{% trans %}main_info{% endtrans %}</div>
+            <div class="box-field-group user js-image-wrapper">
+                <label class="box-field__label">{% trans %}avatar{% endtrans %}</label>
+                <div class="box-field col-1">
+                    <div class="user__avatar"><img src="{% if app.user.image %}{% path app.user.image, 'big' %}{% else %}{{ asset('bundles/app/img/user-avatar.png') }}{% endif %}" class="js-image" alt=""></div>
+                </div>
+                <div class="box-field col-5">
+                    <div class="user__add-avatar">
+                        <div class="box-field__input">
+                            <input type="file" id="fileupload" data-placeholder="Файл не выбран"
+                                   data-browse="Выберите файл" class="styler">
+                        </div>
+                        <div class="box-field__input">
+                            <span class="help-text inline">{% trans %}avatar_maxsize{% endtrans %}</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="box-field-group">
-                <div class="box-field col-3">
+                <div class="box-field col-4">
                     <label class="box-field__label">{% trans %}nickname{% endtrans %} <span class="require-field-z">*</span></label>
                     <div class="box-field__input">
                         <input type="text" class="form-control js-require" name="nickname" value="{{ app.user.nickname }}" />
                     </div>
                 </div>
+                <div class="box-field col-4">
+                    <label class="box-field__label">{% trans %}email{% endtrans %} <span class="require-field-z">*</span></label>
+                    <div class="box-field__input">
+                        <input type="email" class="form-control js-require" name="email" value="{{ app.user.email }}" />
+                    </div>
+                </div>
             </div>
-
             {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
                 <div class="box-field-group">
                     <div class="box-field col-1">
@@ -35,86 +58,46 @@
                     </div>
                 </div>
             {% endif %}
-            <div class="box-field-group user js-image-wrapper">
-                <label class="box-field__label">{% trans %}avatar{% endtrans %}</label>
-                <div class="box-field col-1">
-                    <div class="user__avatar"><img src="{% if app.user.image %}{% path app.user.image, 'big' %}{% else %}{{ asset('bundles/app/img/user-avatar.png') }}{% endif %}" class="js-image" alt=""></div>
-                </div>
-                <div class="box-field col-5">
-                    <div class="user__add-avatar">
-                        <div class="box-field__input">
-                            <input type="file" id="fileupload" data-placeholder="Файл не выбран"
-                                   data-browse="Выберите файл" class="styler">
-                        </div>
-                        <div class="box-field__input">
-                            <span class="help-text inline">{% trans %}avatar_maxsize{% endtrans %}</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="box-field-group">
-                <div class="box-field col-3">
+                <div class="box-field col-4">
                     <label class="box-field__label">{% trans %}profile_name{% endtrans %} <span class="require-field-z">*</span></label>
                     <div class="box-field__input">
                         <input type="text" class="form-control js-require" name="i" value="{{ app.user.i }}" />
                     </div>
                 </div>
-                <div class="box-field col-3">
+                <div class="box-field col-4">
                     <label class="box-field__label">{% trans %}profile_lastname{% endtrans %} <span class="require-field-z">*</span></label>
                     <div class="box-field__input">
                         <input type="text" class="form-control js-require" name="f" value="{{ app.user.f }}" />
                     </div>
                 </div>
-                <div class="box-field col-3">
-                    <label class="box-field__label">{% trans %}profile_bday{% endtrans %}</label>
-                    <div class="box-field__input">
-                        <input type="text" class="form-control js-date" name="birthdate" value="{% if app.user.birthdate %}{{ app.user.birthdate|date('d.m.Y') }}{% endif %}">
-                    </div>
-                </div>
             </div>
             <div class="box-field-group">
                 <div class="box-field col-4">
-                    <label class="box-field__label">E-mail <span class="require-field-z">*</span></label>
-                    <div class="box-field__input">
-                        <input type="email" class="form-control js-require" name="email" value="{{ app.user.email }}" />
-                    </div>
-                </div>
-            </div>
-            <div class="box-field-group">
-                <div class="box-field col-1">
-                    <label class="box-field__label">{% trans %}profile_gender{% endtrans %}</label>
-                    <div class="box-field__input">
-                        <select name="gender" data-placeholder=" " class="styler form-control">
-                            <option value=""></option>
-                            <option value="m" {% if app.user.gender == 'm' %}selected{% endif %}>{% trans %}profile_gender_m{% endtrans %}</option>
-                            <option value="f" {% if app.user.gender == 'f' %}selected{% endif %}>{% trans %}profile_gender_w{% endtrans %}</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="box-field-group">
-                <div class="box-field col-3">
-                    <label class="box-field__label">{% trans %}profile_lang{% endtrans %}</label>
-                    <div class="box-field__input">
-                        <select name="languages[]" multiple class="select2 form-control">
-                            {% for e in languages %}
-                                <option value="{{ e.id }}" {% if e.id in app.user.languages %}selected{% endif %}>{{ e.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="box-field-group">
-                <div class="box-field col-5">
                     <label class="box-field__label">{% trans %}profile_specialization{% endtrans %}</label>
                     <div class="box-field__input">
-                        <input type="text" class="form-control" name="specialization" value="{{ app.user.specialization }}" />
+                        <select name="specialization" data-placeholder=" " class="styler form-control">
+                            <option value="3D модельер">3D модельер</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="box-field col-4">
+                    <label class="box-field__label">{% trans %}profile_gender{% endtrans %}</label>
+                    <div class="box-field__input box-field__checkbox box-field__checkbox--profile">
+                        <div class="box-field__checkbox-col">
+                            <input type="radio" id="genderM" name="gender" value="m" class="styler" {% if app.user.gender == 'm' %}checked{% endif %}>
+                            <label for="genderM" class="nowrap box-field__label">{% trans %}profile_gender_m{% endtrans %}</label>
+                        </div>
+                        <div class="box-field__checkbox-col">
+                            <input type="radio" id="genderF" name="gender" value="f" class="styler" {% if app.user.gender == 'f' %}checked{% endif %}>
+                            <label for="genderF" class="nowrap box-field__label">{% trans %}profile_gender_w{% endtrans %}</label>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="box-field-group">
                 <label class="box-field__label">{% trans %}profile_place{% endtrans %}</label>
-                <div class="box-field col-2">
+                <div class="box-field col-4">
                     <div class="box-field__input">
                         <select name="country" data-placeholder="Страна" class="styler form-control">
                             <option value=""></option>
@@ -124,15 +107,26 @@
                         </select>
                     </div>
                 </div>
-                <div class="box-field col-2">
+                <div class="box-field col-4">
                     <div class="box-field__input">
                         <input type="text" class="form-control" placeholder="Город" name="city" value="{{ app.user.city }}" />
                     </div>
                 </div>
             </div>
+            <div class="box-field-title">{% trans %}profile_about_myself{% endtrans %}</div>
             <div class="box-field-group">
                 <div class="box-field col-5">
-                    <label class="box-field__label">{% trans %}profile_notifications{% endtrans %}</label>
+                    <div class="box-field__input">
+                        <textarea name="text" class="form-control">{{ app.user.text }}</textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="box-field-line">
+                <div class="box-field-line__line"></div>
+            </div>
+            <div class="box-field-title">{% trans %}profile_notifications{% endtrans %}</div>
+            <div class="box-field-group">
+                <div class="box-field col-5">
                     <div class="box-field__input box-field__checkbox">
                         <input type="checkbox" id="notifySale" name="notifySale" value="1" class="styler" {% if app.user.notifySale %}checked{% endif %}>
                         <label for="notifySale" class="nowrap box-field__label">{% trans %}profile_notify_sale{% endtrans %}</label>
@@ -140,14 +134,6 @@
                     <div class="box-field__input box-field__checkbox">
                         <input type="checkbox" id="notifyNews" name="notifyNews" value="1" class="styler" {% if app.user.notifyNews %}checked{% endif %}>
                         <label for="notifyNews" class="nowrap box-field__label">{% trans %}profile_notify_news{% endtrans %}</label>
-                    </div>
-                </div>
-            </div>
-            <div class="box-field-group">
-                <div class="box-field col-5">
-                    <label class="box-field__label">{% trans %}profile_about_myself{% endtrans %}</label>
-                    <div class="box-field__input">
-                        <textarea name="text" class="form-control">{{ app.user.text }}</textarea>
                     </div>
                 </div>
             </div>
