--- a/src/AppBundle/Resources/views/Cabinet/notify.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/notify.html.twig
@@ -5,25 +5,20 @@
 {% block cabinetContent %}
     {% if entities|length > 0 %}
         {% for e in entities %}
-            <article class="article">
-                {#<div class="box-top">
-                    <div class="box-top__cont" style="margin-left: 0;">
-                        <h3 class="article__title">{{ e.name }}</h3>
-                        <div>
-                            <span class="date">{{ e.date|date('d.m.Y') }}</span>
-                            <span class="product-panel__item">
 
-                            </span>
-                        </div>
+            <div class="notify">
+                <img src="{% if e.user2.image %}{% path e.user2.image, 'small' %}{% else %}{{ asset('bundles/app/img/user.png') }}{% endif %}" class="notify__photo">
+                <div class="notify__info">
+                    <div class="notify__date">{{ e.dateStr }}</div>
+                    <div class="notify__text">
+                        <a href="" class="notify__link">{{ e.user2.nickname }}</a>&nbsp;{% if e.type == 'buy' %}купил{% else %}прокомментировал{% endif %} вашу модель "<a href="" class="notify__link">{{ e.product.name }}</a>"
+                        {% if e.type == 'buy' %}<span class="notify__sum">+120 р.</span>{% endif %}
                     </div>
-                </div>#}
-                <div class="article__body">
-                    <div>
-                        <span class="date">{{ e.date|date('H:i d.m.Y') }}</span>
-                    </div>
-                    {{ e.text|raw}}
+                    {% if e.type == 'comment' %}
+                        <div class="notify__comment">{{ e.text|nl2br }}</div>
+                    {% endif %}
                 </div>
-            </article>
+            </div>
         {% endfor %}
     {% else %}
         <div class="article__no-items">
