--- a/src/AppBundle/Resources/views/Catalog/add.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/add.html.twig
@@ -13,6 +13,7 @@
         <div class="wrap-left">
             <div class="box-form settings">
                 <form action="{{ path('catalog_add_write') }}" class="js-add-model-form" method="POST">
+                    <div class="box-field-title">{% trans %}main_info{% endtrans %}</div>
                     <div class="box-field-group">
                         <div class="box-field col-5">
                             <label class="box-field__label">{% trans %}model_name{% endtrans %}
@@ -38,6 +39,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="box-field-line">
+                        <div class="box-field-line__line"></div>
+                    </div>
+                    <div class="box-field-title">{% trans %}model_images{% endtrans %}</div>
                     <div class="box-field-group user js-image-wrapper js-main-image-drop">
                         <label class="box-field__label">{% trans %}model_cover{% endtrans %}
                             <span class="require-field-z">*</span></label>
@@ -63,6 +68,10 @@
                         </div>
 
                     </div>
+                    <div class="box-field-line">
+                        <div class="box-field-line__line"></div>
+                    </div>
+                    <div class="box-field-title">{% trans %}model_files{% endtrans %}</div>
                     <div class="box-field-group user js-image-wrapper js-files-drop">
                         <label class="box-field__label">{% trans %}model_files{% endtrans %}
                             <span class="require-field-z">*</span></label>
@@ -71,6 +80,10 @@
                         </div>
                         <div class="model-files js-model-files"></div>
                     </div>
+                    <div class="box-field-line">
+                        <div class="box-field-line__line"></div>
+                    </div>
+                    <div class="box-field-title">{% trans %}model_info{% endtrans %}</div>
                     <div class="box-field-group">
                         <div class="box-field col-5">
                             <label class="box-field__label">{% trans %}model_manufacturer{% endtrans %}</label>
