--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'AppBundle::_main.html.twig' %}
 
-{% block navblock_style %}display: block;{% endblock %}
-{% block navblock_active_class %}active{% endblock %}
+{% block navblock_class %}nav-profile--main-page{% endblock %}
 
 {% block banners %}
     {% spaceless %}
