--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -2016,17 +2016,24 @@ header {
 
 .navigation,
 .nav-profile {
-  left: 10px;
-  right: 10px;
+  position: relative;
   border-top: 1px solid #e5e5e5;
   background-color: #f7f7f7;
-  z-index: 75; }
+  z-index: 75;
+  left: 10px;
+  right: 10px; }
   .navigation--main-page,
   .nav-profile--main-page {
     position: absolute;
     top: 100%; }
 
+.nav-profile {
+  left: 0px;
+  right: 0px; }
+
 .navigation {
+  position: absolute;
+  top: 100px;
   display: none;
   z-index: 100 !important;
   overflow: hidden; }
