--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -2030,6 +2030,9 @@ header {
 .nav-profile {
   left: 0px;
   right: 0px; }
+  .nav-profile--main-page {
+    left: 10px;
+    right: 10px; }
 
 .navigation {
   position: absolute;
